Cambiar nombre de MATECA a Veterinaria Municipal en sidebar

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <!-- SIDEBAR -->
     <div class="sidebar">
         <div class="sidebar-header">
-            <h1>🏥 MATECA</h1>
+            <h1>🏥 Veterinaria Municipal</h1>
             <p>Gualeguaychú, ER</p>
         </div>
 
