Fix: Cambiar MATECA a Veterinaria Municipal en login + corregir HTML

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
                 <small>Realizado por: <strong>Lisandro M. Etcheverry</strong></small>
             </div>
         </div>
-    </aside>
+    </div>
 
     <!-- MAIN CONTENT -->
     <div class="main-content">
