FIX: Zona horaria Argentina en auditoría + ID tipo_atencion - v2.6

--- a/templates/index.html
+++ b/templates/index.html
@@ -154,7 +154,7 @@
                         <h4>Tipo de Atención</h4>
                         <div class="tipo-atencion-selector">
                             <label class="tipo-option active">
-                                <input type="radio" name="tipo_atencion" value="castracion" checked>
+                                <input type="radio" name="tipo_atencion" id="tipo-atencion" value="castracion" checked>
                                 <div class="option-content">
                                     <span class="option-icon">✂️</span>
                                     <span class="option-label">Castración</span>
@@ -436,6 +436,6 @@
     <!-- NOTIFICATION -->
     <div id="notification" class="notification"></div>
 
-    <script src="{{ url_for('static', filename='script.js') }}?v=2.5"></script>
+    <script src="{{ url_for('static', filename='script.js') }}?v=2.6"></script>
 </body>
 </html>
