--- a/templates/index.html
+++ b/templates/index.html
@@ -185,7 +185,7 @@
                         <div class="form-grid">
                             <div class="form-group">
                                 <label>Número de Registro*</label>
-                                <input type="number" name="numero" id="numero" required style="background-color: #f3f4f6; cursor: not-allowed;" onfocus="this.blur()">
+                                <input type="number" name="numero" id="numero" required tabindex="-1" style="background-color: #f3f4f6; cursor: default; user-select: none;">
                             </div>
                             <div class="form-group">
                                 <label>Fecha*</label>
